syntax = "proto3";

option objc_class_prefix = "RTG";


// Interface exported by the server.
service Master {
      rpc request_experiment(ExperiemntStatement) returns (Response) {}
}

message ExperiemntStatement {
    string name = 1;
    repeated TaskStatement tasks = 2;
}

message TaskStatement {
    string command = 1;
    string name = 2;
    TaskCondition condition = 3;
}

message TaskCondition {
    int64 gpuidx = 1;
}

message Response {
    string experiment_id = 1;
    enum ResponseStatus {
        SUCCESS = 0;
        FAIL = 1;
    }
    ResponseStatus response = 2; // response가 의미하는 값은 Enum으로 정의
}
